	* arch/arm/src/lpc17xx/lpc17_usbhost.c -- Add support for periodic
	  interrupt transfers.
	* examples/hidkbd - Added a simple test for the USB host HID keyboard
	  class driver.
	* configs/olimex-lpc1766stk/hidkbd - Added a configuration to build the
	  USB host HID keyboard class driver test for the LPC17xx.
	* Ran the tool CppCheck (http://sourceforge.net/apps/mediawiki/cppcheck) and
	  fixed several errors in the code identified by the tool.

5.18 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* Incorporate several uIP patches from http://gitweb.aeruder.net/?p=uip.git;a=summary.
	  - Lost SYNACK causes connection reset
	  - Fix missing UDP stats for sent/received packets
	  - Added support for Cygwin as development/test platform.
	* configs/demo9s12ne64 - Integrate new buildroot-1.9 m8s12x toolchain.
	* 'uname -o' is used throughout the build logic in bash scripts and also in
	  Make.defs files in order to distinguish between Cygwin and Linux.  However,
	  the -o option is not standard and is not supported under, for example, OS-X or
	  Solaris.  This was solved by changing all 'uname -o' references to the more
	  complex:  'uname -o 2>/dev/null || echo "Other"'
	* drivers/usbhost/usbhost_enumerate.c -- Add logic to get the VID and PID.  This
	  is necessary in order to support vendor-specific USB devices.
	* examplex/wlan, configs/olimex-lpc1766stk/wlan, drivers/usbhost/usbhost_rtl8187.c,
	  Add infrastructure to support RTL18187 wireless USB.
	* configs/nucleus2g -- backed out USB host changes... wrong board.
	* Renamed arc/hc/include/mc9s12ne64 and src/mc9s12ne64 -- m9s12.  That name is
	  shorter and more general.
	* The NuttX repository has been converted to SVN and can now be found here
	  http://nuttx.svn.sourceforge.net/viewvc/nuttx/
	* configs/mbed/hidkbd -- Added USB host support for the mbed LPC1768 board; add
	  a USB host HID keyboard configuraion.
	* drivers/usbhost/hid_parser.c -- Leverages the LUFA HID parser written by
	  Dean Camera.

